eshop/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-eshop-deployment
  namespace: cicd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cicd-eshop
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: cicd-eshop
    spec:
      containers:
        - name: cicd-eshop
          image: sfilipasikj/cicd-project:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "1Gi"
          ports:
            - containerPort: 80
