eshop/kubernetes/database.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cicd-eshop-postgres
  namespace: cicd
spec:
  serviceName: cicd-eshop-postgres-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        namespace: cicd
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgres-port
          volumeMounts:
            - name: cicd-eshop-postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: cicd-eshop-postgres-data
          persistentVolumeClaim:
            claimName: cicd-eshop-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: cicd-eshop-postgres-service
  namespace: cicd
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
