eshop/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cicd-eshop-service
  namespace: cicd
spec:
  selector:
    app: cicd-eshop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
